turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:5: error: type mismatch;
 found   : String("360/7")
 required: Double
droite("360/7":Double)
       ^